# salary_analysis

./: LICENSE  README.md  pyproject.toml
notebooks/: basic_analysis.ipynb
