[tool.poetry]
name = "salary_analysis"
version = "0.1.0"
description = ""
authors = ["Przemysław Postrch <przemyslaw.postrach@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.1"
jupyter = "^1.0.0"
sklearn = "^0.0.post1"
matplotlib = "^3.6.2"
scikit-learn = "^1.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

